--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	    <meta http-equiv="Content-Security-Policy" content="default-src *;img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	    <title>Estudo Risco e Incerteza em Mapas</title>
+	    <title>Interactive Map</title>
 		<!-- JavaScript-->
 		<script type="text/javascript" src="./js/libs/jquery-3.4.1.js"></script>
 		<script type="text/javascript" src="./js/libs/popper.min.js"></script>
@@ -45,7 +45,7 @@
 					<div id='vis02' style="height: 450px; width: 100%"></div>
 					<div style="border-style: dotted;" id="slidert">
 						<input type="text" id="Vis02Tuto" name="example_name" value="" />
-						<label for="Vis02Tuto"> Posicione o ponteiro para escolher um valor.</label>
+						<label for="Vis02Tuto"> Position the pointer to choose a value.</label>
 					</div>
 				</li>
 			</ul>
