--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	    <meta http-equiv="Content-Security-Policy" content="default-src *;img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	    <title>Interactive Map</title>
+	    <title>Interaction Map</title>
 		<!-- JavaScript-->
 		<script type="text/javascript" src="./js/libs/jquery-3.4.1.js"></script>
 		<script type="text/javascript" src="./js/libs/popper.min.js"></script>
